# Andromeda

./: CMakeLists.txt  LICENSE  README.md  aabb.h  build.sh  bvh.h  camera.h  cube.h  hitable.h  hitable_list.h  main.cpp  material.h  perlin.h  ray.h  scene.h  scenes.h  sphere.h  square.h  texture.h  triangle.h  vec3.h
resource/models/: opera-house.mtl
source/: CMakeLists.txt  aabb.h  bvh.h  camera.h  cube.h  hitable.h  main.cpp  material.h  model.h  object.h  perlin.h  ray.h  resource.h  scene.h  scenes.h  skybox.h  sphere.h  square.h  texture.h  triangle.h  vec3.h
source/tools/: loader_example.cc
